# mongospecs

./: 404.html  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: python-app.yaml  python-publish.yaml
docs/reference/: attrs.md  base.md  empty.md  msgspec.md  ops.md  pydantic.md  query.md  se.md  spec.md  utils.md
mongospecs/: __init__.py  adapter.py  attrs.py  base.py  bson.py  empty.py  msgspec.py  ops.py  pagination.py  pydantic.py  query.py  se.py  types.py  utils.py
mongospecs/helpers/: bson.py  ops.py  pagination.py
mongospecs/mixins/: base.py  crud.py  index.py  integrity.py  query.py  session.py  signal.py
reference/attrs/: index.html
reference/base/: index.html
reference/bson/: index.html
reference/empty/: index.html
reference/msgspec/: index.html
reference/ops/: index.html
reference/pydantic/: index.html
reference/query/: index.html
reference/se/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_base.py  test_bson.py  test_pagination.py  test_queries.py  test_spec_transactions.py
tests/attrs/: adapter_models.py  fixtures.py  models.py  test_adapter.py  test_frames.py  test_pagination.py  test_spec.py
tests/msgspec/: adapter_models.py  fixtures.py  models.py  test_adapter.py  test_frames.py  test_pagination.py  test_queries.py  test_spec.py
tests/pydantic/: adapter_models.py  fixtures.py  models.py  test_adapter.py  test_frames.py  test_pagination.py  test_queries.py  test_spec.py
