[tool.poetry]
name = "mongospec"
version = "0.1.0"
description = "mongo with msgspec"
authors = ["Jay <jay.github0@gmail.com>"]
repository = "https://github.com/jaykv/mongospec"
readme = "README.md"
packages = [{include = "mongospec"}]

[tool.poetry.dependencies]
python = "^3.9"
msgspec = "^0.18.4"
pymongo = "^4.5.0"
methodtools = "^0.4.7"
attrs = "^23.1.0"
blinker = "^1.6.3"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
ruff = "^0.0.254"
mypy = "^1.3.0"
mongomock = "^4.1.2"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.4.12"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore-init-module-imports = true
ignore = ["F811"]
extend-select = ["I"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
ignore_missing_imports = true
show_error_codes = true
enable_error_code = [
    "truthy-bool", 
    "truthy-iterable", 
    "redundant-expr",
    "unused-awaitable",
    "possibly-undefined",
    "redundant-self"
]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
